syntax = "proto3";

package payment;

option go_package = "github.com/amityadav/landr/pkg/pb/payment_pb";

service PaymentService {
  rpc CreateSubscriptionOrder(CreateSubscriptionOrderRequest) returns (CreateSubscriptionOrderResponse);
}

message CreateSubscriptionOrderRequest {
  string plan_id = 1; // "PRO" or "FREE" (though free won't call this)
}

message CreateSubscriptionOrderResponse {
  string order_id = 1;
  float amount = 2;
  string currency = 3;
  string key_id = 4;
  string payment_link = 5;
}
